<resources>
    <string name="app_name">Провери за палмово масло</string>
    <string name="main_activity_title">Палмово масло</string>
    <string name="side_menu_title">Бърза проверка за \n съдържание на \nпалмово масло</string>


    <string name="navigation_drawer_open">Отвори меню</string>
    <string name="navigation_drawer_close">Затвори меню</string>

    <string name="action_login">Влез</string>
    <string name="menu_main">Начало</string>
    <string name="menu_camera">Провери</string>
    <string name="menu_list">Списък продукти</string>
    <string name="menu_register">Регистрирай се</string>
    <string name="menu_log_in">Влез</string>
    <string name="menu_user_details">Потребител</string>
    <string name="menu_about">За нас...</string>
    <string name="main_text">
        <![CDATA[
     <h1> Палмово масло </h1>
        <p>Палмовото масло влезе в нашата кулинария съвсем наскоро. Ако си направим труда да изчетем повече етикети на стоки в магазина, ще видим, че то се съдържа почти навсякъде: бонбони, бисквити, пържени картофи, течен шоколад, чипсове, спагети, сухари, спагети и др.</p>
        <p>\nХидрогенизираните мазнини поевтиняват продуктите и са много изгодни за производителя, но потребителят плаща за това със здравето си.</p>

        <p>\nПалмовото масло усилва вкуса на продукта и ние ядем все повече и повече от него. </p>
        <p>\nПалмовото масло е силен канцероген. Развитите страни отдавна са се отказали от внасянето и влагането на палмовото масло в хранителната индустрия, те ограничават продажбата на продукти, които го съдържат, и на етикета задължително отбелязват наличието му.</p>
]]>
        </string>
    <string name="new_product_name">Име на продукта</string>
    <string name="new_product_barcode">Баркод</string>
    <string name="new_product_origin">Страна произход</string>
    <string name="new_product_desc">Описание</string>
    <string name="new_product_hasPalmoil">Има ли палмово масло?</string>
    <string name="new_product_addNewbtn">Добави нов продукт</string>
    <string name="empty">Няма данни</string>
    <string name="loading">Зареждане</string>
    <string name="checking">Проверяваме....</string>
    <string name="mandat_barcode">Баркода е задължително поле!</string>
    <string name="mandat_name">Името е задължително поле!</string>
    <string name="mandat_description">Описанието е задължително поле!</string>
    <string name="string_scan_barcode">Сканирайте баркод</string>
    <string name="camera_not_available">Няма камера!?</string>
    <string name="login_message">Функционалността за вход е все още в процес на разработка</string>
    <string name="title_home">Начало</string>
    <string name="title_list">Списък продукти</string>
    <string name="title_about">За нас...</string>
    <string name="title_new_product">Добави продукт</string>
    <string name="title_show_product">Продукт</string>
    <string name="not_found">Не е намерен</string>
    <string name="canceled">Спряно</string>
    <string name="username">Потребител:</string>
    <string name="email">Е-поща:</string>
    <string name="createdat">Създаден на:</string>
    <string name="password_label">Парола:</string>
    <string name="sign_up_label">Регистрирай се</string>
    <string name="sign_in_label">Влез</string>
    <string name="user_details_label">Данни за потребител</string>
    <string name="product_added">Продукта е добавен успешно!</string>
    <string name="already_have_an_account_label">Вече имате регистрация? Влезте!</string>
    <string name="about_text">
        <![CDATA[
            <h1> Провери за палмово масло </h1>
            <p>Приложението превръща камерата на вашия смартфон в баркод скенер!</p>
            <p>Използвайте мобилния си телефон за да сканирате и бързо и лесно да разберете дали дадения продукт съдържа палмово масло</p>
            <h2>Как работи?</h2>
            <p>Приложението работи с централна база данни от продукти, чийто списък се увеличава всеки ден. Всеки продукт се проверява дали е наличен в базата данни. При наличие се извежда информация за това дали дадения продукт съдържа палмово масло.</p>
            <p>Ако дадения продукт не е наличен в базата данни на потребителя се предоставя възможност да въведе първи информация за продукта и за това дали съдържа палмово масло.</p>
            <p>Така списъка с продукти нараства и се актуализира с помощта на всички.</p>
            <p>За да се предотврати недобросъвестно записване на детайли за продукти и за да се контролира процеса, само определени потребители имат възможност да въвеждат данни.</p>
            <p>Моля свържете се с нас ако имате желание да подпомогнете процеса за обогатяване на списъка с продукти</p>
        <p><a href="mailto:blazzerbg@gmail.com?Subject=Относно приложение istherepalmoilinside" target="_top">Свържете се с нас!</a></p>
<p>&nbsp;</p>
<p>Всички права запазени, 2015</p>
        ]]> </string>
    <string name="username_taken">Sorry, this username has already been taken.</string>
    <string name="supply_username">Sorry, you must supply a username to register.</string>
    <string name="supply_password">Sorry, you must supply a password to register.</string>
    <string name="invalid_email">Sorry, email address is invalid.</string>
    <string name="email_taken">Sorry, email was already registered.</string>
    <string name="email_missing">Sorry, you must supply a email to register.</string>
    <string name="user_registered">Потребителя е създаден успешно!</string>
    <string name="user_logged_in">Влязохте успешно!</string>
    <string name="user_logged_out">Излязохте успешно!</string>
    <string name="credential_invalid">Sorry, those credentials were invalid.</string>
    <string name="logout">Излез</string>
    <string name="more_product_details">Повече детайли</string>

    <string name="user_mandatory">Потребителското име е задължително!</string>
    <string name="pass_mandatory">Паролата е задължителна!</string>
    <string name="email_mandatory">Е-пощата е задължителна!</string>
</resources>
