<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_main" />
        <item android:id="@+id/nav_camera" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item android:id="@+id/nav_list" android:icon="@drawable/list"
            android:title="@string/menu_list" />

        <item
            android:id="@+id/nav_register"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_log_in"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_log_in" />

        <item android:id="@+id/nav_about" android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>



</menu>