<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_main" android:icon="@drawable/home"
            android:title="@string/menu_main" />
        <item android:id="@+id/nav_camera" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item android:id="@+id/nav_list" android:icon="@drawable/list"
            android:title="@string/menu_list" />

        <item android:id="@+id/nav_more" android:icon="@android:drawable/ic_menu_more"
            android:title="@string/menu_more" />

        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>



</menu>