<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:text="@string/new_product_barcode"
            android:id="@+id/barcode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_product_barcode"
            android:focusable="false"
            android:cursorVisible="true"
            android:editable="false" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:text=""
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:hint="@string/new_product_name"
            android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:text=""
            android:id="@+id/desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_product_desc"
            android:linksClickable="false"
            android:lines="5"
            android:gravity="top" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/HasPalmOil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_product_hasPalmoil" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_product_addNewbtn" />


    </LinearLayout>
</ScrollView>