<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_HasPalmOil"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/barcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/new_product_barcode" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/origin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/new_product_origin" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/new_product_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:gravity="top"
                android:hint="@string/new_product_desc"
                android:lines="5"
                android:linksClickable="false" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/HasPalmOil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/new_product_hasPalmoil" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="70px"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/button_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:clickable="true"
            android:text="@string/more_product_details"></Button>

    </LinearLayout>
</ScrollView>